--- a/client/main.html
+++ b/client/main.html
@@ -1,8 +1,8 @@
 <head>
   <title>cookyMeteor</title>
+  <link rel="stylesheet" type="text/css" href="./main.css">
 </head>
 
 <body>
   <div id="render-target"></div>
 </body>
-
