--- a/client/main.html
+++ b/client/main.html
@@ -1,6 +1,8 @@
 <head>
   <title>cookyMeteor</title>
   <link rel="stylesheet" type="text/css" href="./main.css">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans|Quicksand" rel="stylesheet">
+
 </head>
 
 <body>
