--- a/client/main.html
+++ b/client/main.html
@@ -4,6 +4,5 @@
 </head>
 
 <body>
-  <div id="render-target"></div>
-  <script src="./routes.js"></script>
+  <div class="container-fluid" id="render-target"></div>
 </body>
