--- a/client/main.html
+++ b/client/main.html
@@ -2,6 +2,7 @@
   <title>cookyMeteor</title>
   <link rel="stylesheet" type="text/css" href="./main.css">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans|Quicksand" rel="stylesheet">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css">
 
 </head>
 
