--- a/client/main.html
+++ b/client/main.html
@@ -8,4 +8,5 @@
 
 <body>
   <div class="container-fluid" id="render-target"></div>
+  <script src="https://use.fontawesome.com/ddb5260482.js"></script>
 </body>
