--- a/client/main.html
+++ b/client/main.html
@@ -1,3 +1,4 @@
+<!-- Sergio Velasquez: A nosotros no nos estaba funcionando bien cuando haciamos los imports de los stylesheet aquí, nose si les pase lo mismo. Pero al hacerlos en el main.js funcionaba.-->
 <head>
   <title>cookyMeteor</title>
   <link rel="stylesheet" type="text/css" href="./main.css">
